--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ function showFinalImage(){
   imgContainer.style.padding = "20px";
 
   const img = document.createElement("img");
-  img.src = "biabb"; // coloque o caminho correto da imagem no servidor
+  img.src = "biabb.png"; // coloque o caminho correto da imagem no servidor
   img.alt = "imagem final";
   img.style.maxWidth = "400px";
   img.style.width = "80%";
@@ -149,3 +149,4 @@ function showFinalImage(){
 
 </body>
 </html>
+
